tests/snapshots/run_wpt_conformance__coreml_clamp_float32_5D_tensor_specified_both_negative_options_minValue_and_options_maxValue.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "clamp.https.any.js",
    "clamp float32 5D tensor specified both negative options.minValue and options.maxValue",
    "coreml",
    "PASS",
)
