tests/snapshots/run_wpt_conformance__coreml_clamp_int32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
clamp.https.any.js clamp int32 1D tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type clip: Param 'x' has incorrect type for operator 'ios17.clip'. Expected { [...]>, [...]>, tensor<fp16, tensor<fp32 }; got tensor<int32, [8]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    clampInput: i32[8];
  }

  nodes {
    [clampOutput] = clamp(clampInput, label="", maxValue=2147483645, minValue=-2);
  }

  outputs { clampOutput; }
}
